--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,12 @@
             <version>2.8.1</version>
         </dependency>
 
+        <!--slf4j-->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.25</version>
+        </dependency>
     </dependencies>
 
 </project>
