--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,13 @@
             <version>1.8.3</version>
         </dependency>
 
+        <!--json-->
+        <dependency>
+            <groupId>net.sf.json-lib</groupId>
+            <artifactId>json-lib</artifactId>
+            <version>2.4</version>
+        </dependency>
+
         <!--spring-->
         <dependency>
             <groupId>org.springframework</groupId>
